[package]
name = "blink1-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blinkrs = { git = "https://github.com/coreyja/blinkrs.git", branch = "ca/main/m2" }
# blinkrs = { path = "../blinkrs" }
color-eyre = "0.5.11"
eyre = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
ureq = { version = "2.3.0", features = ["json"] }
